# Agents-common-installer

./: .gitignore  README.md  agent-common-sync.bat  agent-common-sync.cmd  agent-common-sync.ps1  agent-common-sync.sh
.claude/: settings.local.json
catalog-index/: devmeou-ai-readme-evaluated-repos.json  devmeou-ai-readme-evaluated-repos.md  devmeou-selected-ai-repos.txt
model-task-optimizer-mcp/: README.md  pyproject.toml
model-task-optimizer-mcp/src/model_task_optimizer_mcp/: optimizer.py  server.py
skills/esp-idf-firmware/: SKILL.md
skills/model-task-optimizer/: SKILL.md
skills/n8nctl/: LICENSE.txt  SKILL.md
skills/project-skill-recommender/: SKILL.md
