[project]
name = "model-task-optimizer-mcp"
version = "0.1.0"
description = "MCP server for task-aware AI model selection and tuning recommendations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0"
]

[project.scripts]
model-task-optimizer-mcp = "model_task_optimizer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
